--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "view-design": "^4.4.0",
     "vue": "^2.6.11",
     "vue-router": "^3.4.9",
+    "vue2-editor": "^2.10.2",
     "vuex": "^3.6.0"
   },
   "devDependencies": {
